# openglLearn

./: .gitignore  CMakeLists.txt  shader.sln
includes/glad/: glad.h
libs/: glfw3.lib
shader/: main.cpp  shader.vcxproj  shader.vcxproj.filters
src/: glad.c  main.cpp
src/common/: shaders.h
src/fourth/: CMakeLists.txt  main.cpp  texture_f.glsl  texture_v.glsl
src/second/: CMakeLists.txt  main.cpp
src/third/: CMakeLists.txt  main.cpp
